Fix audio control buttons on Safari

--- a/abcjs-audio.css
+++ b/abcjs-audio.css
@@ -15,9 +15,9 @@
 }
 
 .abcjs-inline-audio .abcjs-btn {
-	display: inherit;
+	display: block;
 	width: 28px;
-	height: 26px;
+	height: 34px;
 	margin-right: 2px;
 	padding: 3px 4px;
 
